# nophicas-tidings

./: .gitignore  ;  Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.ts
.github/workflows/: github-pages.yml  webpack.yml
docs/: 421.index.js  579.index.js  index.html  index.js  index.js.map  ts_worker_ts.index.js  ts_worker_ts.index.js.map
scss/: styles.scss
src/: lib.rs  player.rs
src/dol/: collectible.rs  mod.rs
ts/: common.ts  index.ts  main.css  worker.ts  xivapi.ts
