[package]
name = "nophicas-tidings"
version = "0.1.0"
edition = "2021"
authors = ["catgirl-jade"]
description = "A gathering optimizer for FFXIV"
license = "GPL-3.0"
homepage = "https://catgirl-jade.github.io/nophicas-tidings" 
repository = "https://github.com/catgirl-jade/nophicas-tidings"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
development = ["console_panic"]
production = ["console_panic"]
console_panic = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
fraction = "0.13"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
thiserror = "1.0.38"
tracing = "0.1.37"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
lto = true
# Keep debug symbols
debug = true
# opt-level = "s"
